# wivrn-fbt

./: CMakeLists.txt  COMPARISON.md  FLATPAK_SETUP.md  INSTALL_FINAL.sh  LICENSE  MANIFEST.md  QUICKREF.sh  README.md  SETUP_GUIDE.md  config_ui.html  install.sh  install_flatpak.sh  requirements.txt  uninstall.sh  webcam_tracker.py  webcam_tracker_flatpak.py  wivrn-fbt-webcam.service  wivrn-fbt.service  wivrn_fbt_config.json  wivrn_fbt_core.cpp
